Fix layout__content overflow issue

--- a/client/src/layout/layout.scss
+++ b/client/src/layout/layout.scss
@@ -26,6 +26,7 @@ body {
 
   .layout__content {
     padding: 0;
+    overflow: hidden;
   }
 
   .content {
